--- a/BrewingApp/Views/EditHop.xaml
+++ b/BrewingApp/Views/EditHop.xaml
@@ -24,17 +24,8 @@
         <StackPanel>
             <!--TitlePanel enthält den Namen der Anwendung und den Seitentitel-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock x:Name="PageTitle" Text="Add Hop" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock x:Name="PageTitle" Text="Edit Hop" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
-
-        <!--<Grid 
-            Row="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>-->
-
 
             <toolkit:ListPicker 
             HorizontalContentAlignment="Stretch"
@@ -55,52 +46,74 @@
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
 
-                <toolkit:PhoneTextBox  
-                Name="txtBoilTime" 
-                Grid.Column="0"
-                Grid.Row="1"
-                Hint="Boil Time"
-                Text="{Binding BoilTime, Mode=TwoWay}"
-                HorizontalAlignment="Stretch" 
-                Margin="0" Grid.RowSpan="2" 
-                Padding="0" 
-                InputScope="NumberFullWidth">
-                </toolkit:PhoneTextBox >
+                <StackPanel
+                    Grid.Row="1"
+                    Grid.Column="0">
+                     
+                    <TextBlock 
+                        Text="Boil Time"
+                        Padding="10,10,0,0"
+                    />
+                
+                    <toolkit:PhoneTextBox  
+                    Name="txtBoilTime" 
+                    Hint="Boil Time"
+                    Text="{Binding BoilTime, Mode=TwoWay}"
+                    HorizontalAlignment="Stretch" 
+                    Margin="0" Grid.RowSpan="2" 
+                    Padding="0" 
+                    InputScope="NumberFullWidth">
+                    </toolkit:PhoneTextBox >                   
+                </StackPanel>
 
-                <toolkit:PhoneTextBox  
-                Name="txtAlphaAcid" 
-                Grid.Column="1"
-                Grid.Row="1"
-                Hint="AA %"
-                HorizontalAlignment="Stretch" 
-                Margin="0" 
-                Grid.RowSpan="2"
-                Text="{Binding AlphaAcid, Mode=TwoWay}"
-                InputScope="NumberFullWidth">
-                </toolkit:PhoneTextBox>
+                <StackPanel
+                    Grid.Row="1"
+                    Grid.Column="1">
 
-                <toolkit:PhoneTextBox 
-                Hint="Amount"
-                Name="txtAmount" 
-                Grid.Column="2"
-                Grid.Row="1"
-                HorizontalAlignment="Stretch" 
-                Margin="0" 
-                Grid.RowSpan="2" 
-                ActualHintVisibility="Visible"
-                Text="{Binding Amount, Mode=TwoWay}"
-                InputScope="NumberFullWidth">
-                </toolkit:PhoneTextBox>
+                    <TextBlock 
+                        Text="Alpha Acids %"
+                        Padding="10,10,0,0"
+                    />
+                    <toolkit:PhoneTextBox  
+                        Name="txtAlphaAcid" 
+                        Hint="AA %"
+                        HorizontalAlignment="Stretch" 
+                        Margin="0" 
+                        Grid.RowSpan="2"
+                        Text="{Binding AlphaAcid, Mode=TwoWay}"
+                        InputScope="NumberFullWidth">
+                    </toolkit:PhoneTextBox>
+                </StackPanel>
+
+                <StackPanel
+                    Grid.Row="1"
+                    Grid.Column="2">
+
+                    <TextBlock 
+                        Text="Amount"
+                        Padding="10,10,0,0"
+                    />
+                    <toolkit:PhoneTextBox 
+                        Hint="Amount"
+                        Name="txtAmount" 
+                        HorizontalAlignment="Stretch" 
+                        Margin="0" 
+                        Grid.RowSpan="2" 
+                        ActualHintVisibility="Visible"
+                        Text="{Binding Amount, Mode=TwoWay}"
+                        InputScope="NumberFullWidth">
+                    </toolkit:PhoneTextBox>
+                </StackPanel>
             </Grid>
-            <Rectangle
-            Grid.Row="2"
-            Stroke="LightGray"
-            StrokeThickness="1"
-            Height="1"
-            HorizontalAlignment="Stretch"
-            VerticalAlignment="Bottom" 
-            Margin="13,0,13,0">
-            </Rectangle>
+            
+            <Button
+                Name="btnOK"
+                HorizontalAlignment="Stretch"
+                Height="Auto"
+                Content="OK"
+                Click="btnOK_Click" />
+                
+            
     </StackPanel>
     </Grid>
 
