prepared Gravity calculation
- model "Malt" needs adjustment (more arguments need to be parsed)
- Gravity calculation is implementd (GravityVM)
- efficiency???
- no View just yet

--- a/BrewingApp/Views/Settings.xaml
+++ b/BrewingApp/Views/Settings.xaml
@@ -92,7 +92,7 @@
                         Header="Hop Formula"
                         ItemsSource="{Binding HopFormulaList}"
                         SelectedItem="{Binding HopFormulaSelection, Mode=TwoWay}"
-                        HorizontalAlignment="Stretch"/>
+                        HorizontalAlignment="Stretch" OpacityMask="Blue" />
                     
                 </StackPanel>
 
