--- a/BrewingApp/MainPage.xaml
+++ b/BrewingApp/MainPage.xaml
@@ -43,32 +43,44 @@
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
 
-                    <toolkit:HubTile Grid.Row="1" Grid.Column="0" 
-                                         Margin="12,12,0,0"
-                                         Title="Brew &#13;House"
-                                         Source=""
-                                         Tap="HubTile_Tap" 
-                                         Name="BrewHouseTile" />
-                    <toolkit:HubTile Grid.Row="1" Grid.Column="1" 
-                                         Margin="12,12,0,0"
-                                         Title="Hops &amp; &#13;Malt" 
-                                         Tap="HubTile_Tap" 
-                                          Name="HopsMaltTile" />
-                    <toolkit:HubTile Grid.Row="2" Grid.Column="0" 
-                                         Margin="12,12,0,0"
-                                         Title="Convert &#13;Units" 
-                                         Tap="HubTile_Tap"
-                                         Name="ConvertersTile" />
-                    <toolkit:HubTile Grid.Row="2" Grid.Column="1" 
-                                         Margin="12,12,0,0"
-                                         Title="Mashing" 
-                                         Tap="HubTile_Tap" 
-                                         Name="MashingTile" />
-                    <toolkit:HubTile Grid.Row="3" Grid.Column="0" 
-                                         Margin="12,12,0,0"
-                                         Title="Settings" 
-                                         Tap="HubTile_Tap" 
-                                         Name="SettingsTile" />
+                    <toolkit:HubTile 
+                        Grid.Row="1" 
+                        Grid.Column="0"
+                        Margin="12,12,0,0"
+                        Title="Brew &#13;House"
+                        Source=""
+                        Tap="HubTile_Tap" 
+                        Name="BrewHouseTile" />
+                    <toolkit:HubTile 
+                        Grid.Row="1" 
+                        Grid.Column="1" 
+                        Margin="12,12,0,0"
+                        Title="Hops" 
+                        Tap="HubTile_Tap" 
+                        Name="HopsTile" />
+                    <toolkit:HubTile 
+                        Grid.Row="2" 
+                        Grid.Column="0" 
+                        Margin="12,12,0,0"
+                        Title="Convert &#13;Units" 
+                        Tap="HubTile_Tap"
+                        Source="/BrewingApp;component/Images/icon_scales_big.png"
+                        Name="ConvertersTile" />
+                    <toolkit:HubTile 
+                        Grid.Row="2" 
+                        Grid.Column="1" 
+                        Margin="12,12,0,0"
+                        Title="Malts" 
+                        Tap="HubTile_Tap" 
+                        Name="MaltsTile" />
+                    <toolkit:HubTile 
+                        Grid.Row="3" 
+                        Grid.Column="0" 
+                        Source="/BrewingApp;component/Images/icon_gears_big.png"
+                        Margin="12,12,0,0"
+                        Title="Settings" 
+                        Tap="HubTile_Tap" 
+                        Name="SettingsTile" />
                 </Grid>
             </ScrollViewer>
         </Grid>
