--- a/BrewingApp/Views/PivotHops.xaml
+++ b/BrewingApp/Views/PivotHops.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="BrewingApp.Pages.PivotHopsMalt"
+    x:Class="BrewingApp.Pages.PivotHops"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -180,161 +180,13 @@
         </controls:PivotItem>
 
 <!-- ########### Pivot item two #######################################-->
-        <!-- SPECIFIC GRAVITY-->
-        <controls:PivotItem Header="Gravity" Name="GravityPivot">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-
-                <Grid >
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-
-                    <!-- VOLUMNE / EFFICIENCY -->
-                    <Grid >
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="0.8*"/>
-                            <ColumnDefinition Width="0.4*"/>
-                            <ColumnDefinition Width="1*"/>
-                        </Grid.ColumnDefinitions>
-
-                        <StackPanel  
-            			    Orientation="Vertical"
-            			    Grid.Column="0">
-
-                            <TextBlock 
-                                Text="Batch Volume" 
-                                FontSize="{StaticResource PhoneFontSizeNormal}" 
-                                FontFamily="{StaticResource PhoneFontFamilyNormal}" 
-                                VerticalAlignment="Top" 
-                                LineHeight="31" 
-                                LineStackingStrategy="BlockLineHeight" 
-                                Foreground="{StaticResource PhoneSubtleBrush}" 
-                                TextWrapping="Wrap" 
-                                Margin="12,0,12,0"/>
-                            <TextBox 
-            				    HorizontalAlignment="Stretch" 
-            				    x:Name="txtGravityVolumne" 
-            				    Text="{Binding BatchVolume, Mode=TwoWay}" 
-            				    InputScope="NumberFullWidth"/>
-                        </StackPanel>
-
-                        <StackPanel 
-            			    Orientation="Vertical"
-            			    Grid.Column="1">
-
-                        <TextBlock Text="Efficiency" 
-                            FontSize="{StaticResource PhoneFontSizeNormal}"
-                            FontFamily="{StaticResource PhoneFontFamilyNormal}"
-                            VerticalAlignment="Top"
-                            LineHeight="31"
-                            LineStackingStrategy="BlockLineHeight"
-                            Foreground="{StaticResource PhoneSubtleBrush}"
-                            TextWrapping="Wrap" />
-                        <TextBox 
-            				HorizontalAlignment="Stretch" 
-            				x:Name="txtGravityEfficiency" 
-            				Text="{Binding Efficiency, Mode=TwoWay}" 
-            				InputScope="NumberFullWidth"
-                             Margin="-10,0,-10,0" />
-                        </StackPanel>
-
-                        <TextBlock 
-                            Height="Auto"
-                            HorizontalAlignment="Center"
-                            Name="txtGravity"
-                            Text="{Binding Gravity, Mode=TwoWay, StringFormat=' {0:f3}'}"
-                            VerticalAlignment="Bottom"
-                            Grid.Column="2" FontSize="84" />
-                    </Grid>
-
-                    <Rectangle
-                    Grid.Row="1"
-                    HorizontalAlignment="Stretch"
-                    VerticalAlignment="Top"
-                    Height="1" 
-                    Stroke="Red" 
-                    StrokeThickness="1" 
-                    Margin="0,0,0,15">
-                    </Rectangle>
-
-                      
-
-                    <!-- LISTBOX WITH MALTS-->
-                    <ListBox
-                    Grid.Row="1"
-            		x:Name="MaltList"
-            		VerticalAlignment="Stretch"         
-            		ItemsSource="{Binding ItemList}" 
-                    Padding="10,10,0,10"
-                    ItemContainerStyle="{StaticResource ListBoxItemStyle}">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-
-                                <StackPanel>
-                                    <TextBlock 
-                                        Style="{StaticResource PhoneTextExtraLargeStyle}" 
-                                        Text="{Binding Name}" 
-                                        VerticalAlignment="Bottom"/>
-
-                                    <Grid>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*"/>
-                                            <ColumnDefinition Width="Auto"/>
-                                            <ColumnDefinition Width="*"/>
-                                        </Grid.ColumnDefinitions>
-
-                                        <StackPanel 
-                                            Orientation="Horizontal" 
-                                            Grid.Column="0" >
-
-                                            <TextBlock
-                                                Text="{Binding Amount}" 
-                                                Margin="10,0,5,0"/>
-                                            <TextBlock
-                                                Text="Gram???"/>
-                                        </StackPanel>
-
-                                        <TextBlock
-                                            Grid.Column="1"
-                                            Text="∣"/>
-                                        <TextBlock
-                                            Text="{Binding Lovibond, StringFormat=' {0}°L'}"
-                                            Grid.Column="2"
-                                            HorizontalAlignment="Center"/>
-                                    </Grid>
-
-                                    <toolkit:ContextMenuService.ContextMenu>
-                                        <toolkit:ContextMenu>
-                                            <toolkit:MenuItem                                                 
-                                                Header="Edit"
-                                                Command="{Binding ElementName=MaltList, Path=DataContext.EditCommand}"
-                                                CommandParameter="{Binding}"/>
-                                            <toolkit:MenuItem 
-                                                Header="Remove"
-            						            Command="{Binding ElementName=MaltList, Path=DataContext.RemoveCommand}"
-                                                CommandParameter="{Binding}"/>
-                                        </toolkit:ContextMenu>
-                                    </toolkit:ContextMenuService.ContextMenu>
-                                </StackPanel>
-                                    
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-                </Grid>
-                <sh:AdvancedApplicationBarIconButton 
-                        Command="{Binding ElementName=GravityPivot, Path=DataContext.AddCommand}" 
-                        Text="Add" 
-                        IconUri="BrewingApp;content/Images/plusButton.png" />
-
-            </Grid>
-        </controls:PivotItem>
-        <!-- Note: the actionbar buttons are declared in their respective pivots -->   
-    </controls:Pivot>
+        
+  
+            <controls:PivotItem>
+                
+            </controls:PivotItem>
+        </controls:Pivot>      
+    <!-- Note: the actionbar buttons are declared in their respective pivots -->
     <sh:AdvancedApplicationBar 
         IsVisible="True" 
         Mode="Minimized">
