--- a/BrewingApp/MainPage.xaml
+++ b/BrewingApp/MainPage.xaml
@@ -70,6 +70,7 @@
                         Grid.Row="2" 
                         Grid.Column="1" 
                         Margin="12,12,0,0"
+                        Source="/BrewingApp;component/Images/icon_grains_big.png"
                         Title="Malts" 
                         Tap="HubTile_Tap" 
                         Name="MaltsTile" />
