--- a/BrewingApp/Views/PivotMalts.xaml
+++ b/BrewingApp/Views/PivotMalts.xaml
@@ -17,7 +17,15 @@
     shell:SystemTray.IsVisible="True">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid x:Name="LayoutRoot">
+        <Grid.Background>
+            <ImageBrush 
+                ImageSource="/BrewingApp;component/Images/icon_grains_big.png" 
+                AlignmentX="Right" 
+                AlignmentY="Bottom" 
+                Stretch="None" 
+                Opacity="0.5" />
+        </Grid.Background>
         
         <Grid.Resources>
             <Style x:Key="ListBoxItemStyle" TargetType="ListBoxItem">
