--- a/BrewingApp/Views/PivotConverters.xaml
+++ b/BrewingApp/Views/PivotConverters.xaml
@@ -17,20 +17,20 @@
     shell:SystemTray.IsVisible="True">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid x:Name="LayoutRoot">
+        <Grid.Background>
+            <ImageBrush 
+                            ImageSource="/BrewingApp;component/Images/icon_gears_big.png" 
+                            AlignmentX="Right" 
+                            AlignmentY="Bottom" 
+                            Stretch="None" 
+                            Opacity="0.5" />
+        </Grid.Background>
         <!--Pivot Control-->
         <controls:Pivot Title="Unit Converters" Name="ConverterPivot">
             <!--Pivot TEMPERATURE-->
             <controls:PivotItem Header="Heat">
                 <Grid>
-                    <Grid.Background>
-                        <ImageBrush 
-                            ImageSource="/BrewingApp;component/Images/icon_scales_big.png" 
-                            AlignmentX="Right" 
-                            AlignmentY="Bottom" 
-                            Stretch="None" 
-                            Opacity="0.5" />
-                    </Grid.Background>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
@@ -90,14 +90,6 @@
             <!--Pivot item VOLUME-->
             <controls:PivotItem Header="Fluids">
                 <Grid>
-                    <Grid.Background>
-                        <ImageBrush 
-                            ImageSource="/BrewingApp;component/Images/icon_scales_big.png" 
-                            AlignmentX="Right" 
-                            AlignmentY="Bottom" 
-                            Stretch="None" 
-                            Opacity="0.5" />
-                    </Grid.Background>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
@@ -158,14 +150,6 @@
             <!--Pivot item WEIGHTS-->
             <controls:PivotItem Header="Weights">
                 <Grid>
-                    <Grid.Background>
-                        <ImageBrush 
-                            ImageSource="/BrewingApp;component/Images/icon_scales_big.png" 
-                            AlignmentX="Right" 
-                            AlignmentY="Bottom" 
-                            Stretch="None" 
-                            Opacity="0.5" />
-                    </Grid.Background>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
