--- a/BrewingApp/MainPage.xaml
+++ b/BrewingApp/MainPage.xaml
@@ -56,6 +56,7 @@
                         Grid.Column="1" 
                         Margin="12,12,0,0"
                         Title="Hops" 
+                        Source="/BrewingApp;component/Images/icon_hops_big.png"
                         Tap="HubTile_Tap" 
                         Name="HopsTile" />
                     <toolkit:HubTile 
