--- a/BrewingApp/Views/PivotHops.xaml
+++ b/BrewingApp/Views/PivotHops.xaml
@@ -29,6 +29,20 @@
         </Grid.Background>
         
         <Grid.Resources>
+            <SolidColorBrush x:Key="PhoneTextBoxBrush" Color="#BEBEBE"/>
+            <Style TargetType="toolkit:ListPicker">
+                <Setter Property="Background" Value="{StaticResource PhoneTextBoxBrush}" />
+                <Setter Property="BorderBrush" Value="{StaticResource PhoneTextBoxBrush}" />
+            </Style>
+            <Style TargetType="TextBox">
+                <Setter Property="Background" Value="{StaticResource PhoneTextBoxBrush}" />
+                <Setter Property="BorderBrush" Value="{StaticResource PhoneTextBoxBrush}" />
+            </Style>
+            <Style TargetType="toolkit:PhoneTextBox">
+                <Setter Property="Background" Value="{StaticResource PhoneTextBoxBrush}" />
+                <Setter Property="BorderBrush" Value="{StaticResource PhoneTextBoxBrush}" />
+            </Style>
+
             <Style x:Key="ListBoxItemStyle" TargetType="ListBoxItem">
                 <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
                 <Setter Property="HorizontalAlignment" Value="Stretch"/>
@@ -147,7 +161,7 @@
                                             Grid.Column="1"
                                             Text="∣"/>
                                         <TextBlock
-                                            Text="{Binding AlphaAcid, StringFormat=' {0:f3}%'}"
+                                            Text="{Binding AlphaAcid, StringFormat=' {0:f1}%'}"
                                             Grid.Column="2"
                                             HorizontalAlignment="Center"/>
                                         <TextBlock
@@ -181,7 +195,7 @@
                 <sh:AdvancedApplicationBarIconButton 
             		Command="{Binding ElementName=BitternessPivot, Path=DataContext.AddCommand}"
             		Text="Add" 
-            		IconUri="BrewingApp;content/Images/plusButton.png" />
+            		IconUri="/Images/plusButton.png" />
             </Grid>
         </controls:PivotItem>
 
@@ -192,7 +206,56 @@
                         <local:WeightConverter x:Key="WeightConverter"/>
                     </StackPanel.Resources>
                         <!-- UPPER HALF -->
-                <StackPanel>
+
+                    <StackPanel
+                        Margin="0,10,0,0">
+                        <TextBlock Text="Substitution"/>
+                        <Rectangle
+                            Grid.Row="1"
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Top"
+                            Height="1" 
+                            Stroke="Red" 
+                            StrokeThickness="1" />
+
+                        <toolkit:ListPicker
+                            Header="Hop varity" 
+                            ItemsSource="{Binding HopVarities.Keys}"
+                            SelectedItem="{Binding HopSelection2, Mode=TwoWay}"
+                            HorizontalAlignment="Stretch"/>
+
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+
+                            <StackPanel
+                                Grid.Column="0">
+                                <TextBlock 
+                                    Text="Alpha Acid (%)"
+                                    Padding="0,10,0,0" 
+                                    Style="{StaticResource PhoneTextSubtleStyle}" />
+
+                                <toolkit:PhoneTextBox
+                                    HorizontalAlignment="Stretch" 
+                                    Margin="0" 
+                                    Text="{Binding AlphaAcid2, Mode=TwoWay}"
+                                    InputScope="NumberFullWidth"/>
+                            </StackPanel>
+
+                            <TextBlock
+                                Grid.Column="1"
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Bottom"
+                                Padding="0,0,10,0"
+                                Text="{Binding Amount2, Mode=TwoWay, Converter={StaticResource WeightConverter} }" 
+                                FontSize="84" />
+                        </Grid>
+                    </StackPanel>
+
+                <!-- LOWER HALF-->
+                    <StackPanel>
                     <TextBlock Text="Hop according to recipe"/>
                     <Rectangle
                         Grid.Row="1"
@@ -241,54 +304,6 @@
                                     Text="{Binding Amount1, Mode=TwoWay, Converter={StaticResource WeightConverter} }"
                                     InputScope="NumberFullWidth"/>
                             </StackPanel>
-                        </Grid>
-                    </StackPanel>
-
-                <!-- LOWER HALF-->
-                    <StackPanel
-                        Margin="0,10,0,0">
-                        <TextBlock Text="Substitution"/>
-                        <Rectangle
-                            Grid.Row="1"
-                            HorizontalAlignment="Stretch"
-                            VerticalAlignment="Top"
-                            Height="1" 
-                            Stroke="Red" 
-                            StrokeThickness="1" />
-
-                        <toolkit:ListPicker
-                            Header="Hop varity" 
-                            ItemsSource="{Binding HopVarities.Keys}"
-                            SelectedItem="{Binding HopSelection2, Mode=TwoWay}"
-                            HorizontalAlignment="Stretch"/>
-
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
-                            
-                            <StackPanel
-                                Grid.Column="0">
-                                <TextBlock 
-                                    Text="Alpha Acid (%)"
-                                    Padding="0,10,0,0" 
-                                    Style="{StaticResource PhoneTextSubtleStyle}" />
-
-                                <toolkit:PhoneTextBox
-                                    HorizontalAlignment="Stretch" 
-                                    Margin="0" 
-                                    Text="{Binding AlphaAcid2, Mode=TwoWay}"
-                                    InputScope="NumberFullWidth"/>
-                            </StackPanel>
- 
-                            <TextBlock
-                                Grid.Column="1"
-                                HorizontalAlignment="Right"
-                                VerticalAlignment="Bottom"
-                                Padding="0,0,10,0"
-                                Text="{Binding Amount2, Mode=TwoWay, Converter={StaticResource WeightConverter} }" 
-                                FontSize="84" />
                         </Grid>
                     </StackPanel>
                 
