--- a/BrewingApp/MainPage.xaml
+++ b/BrewingApp/MainPage.xaml
@@ -22,15 +22,13 @@
         </Grid.RowDefinitions>
 
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock x:Name="ApplicationTitle" Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}"/>
+        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">   
             <TextBlock x:Name="PageTitle" Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Hidden">
-                <Grid Width="370" HorizontalAlignment="Left" Margin="0,0,0,12">
+                <Grid HorizontalAlignment="Stretch" Margin="0,0,0,12">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
@@ -50,8 +48,9 @@
                         Title="Brew &#13;House"
                         Source=""
                         Tap="HubTile_Tap" 
-                        Name="BrewHouseTile" />
-                    <toolkit:HubTile 
+                        Name="BrewHouseTile">
+                </toolkit:HubTile>
+                <toolkit:HubTile 
                         Grid.Row="1" 
                         Grid.Column="1" 
                         Margin="12,12,0,0"
@@ -84,7 +83,6 @@
                         Tap="HubTile_Tap" 
                         Name="SettingsTile" />
                 </Grid>
-            </ScrollViewer>
         </Grid>
     </Grid>
  
